--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"npm install && npm install --prefix client && npm run build --prefix client",
     "start": "nodemon server/server.js"
   },
   "keywords": [],
